# insurance

./: .gitignore  __main__.py  pyproject.toml
models/: lr.pkl
notebooks/: eda.ipynb  insurance_eda.ipynb  model.ipynb
src/: config.py  utils.py
src/data/: preprocess.py
src/models/: train.py
