[tool.poetry]
name = "insurance"
version = "0.1.0"
description = ""
authors = ["Guilherme Prado <guizmk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
ipykernel = "^6.29.5"
kaggle = "^1.6.17"
sidetable = "^0.9.1"
matplotlib = "3.8.0"
missingno = "^0.5.2"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
dython = "^0.7.6"
scipy = "^1.14.0"
jinja2 = "^3.1.4"
xgboost = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
